# lucas

./: .busted  .clang-format  .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.alpine-3.17-ssl3  Dockerfile.ubuntu2304  Dockerfile_18  Dockerfile_20  Dockerfile_22  Dockerfile_alpine_317  Dockerfile_u18  Dockerfile_u20  Dockerfile_u22  Doxyfile  LICENSE.md  README.md  build.sh  cassandra.env  docker-compose-arm.yml  docker-compose.devcontainer.yml  docker-compose.yml  example_for_loop.lua  example_query.lua  format.sh  library.c  library.cpp  library.h  lucas-dev-1.rockspec  package-lock.json  print.sh  run.sh  start.sh  (+1 more)
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: CODEOWNERS  pull_request_template.md  release-please.yml  sync-repo-settings.yaml
.github/workflows/: artifacts.yml  build.yml  ci.yml  cron-sast-code.yaml  release-please.yml  release.yml
include/: compatibility.h  compatible.h  errors.h  library.h  lucas.h  query.h
integration/: Dockerfile  docker-compose.override.yml  docker-compose.yml  init.cql  scratch.lua
integration/cassandra/: 01_schema.cql  02_data.cql  cassandra.yaml  cassandra1.yaml  cassandra2.yaml  cassandra3.yaml  client.conf  client_cert.crt_signed  client_key.key  client_signing_request.csr  driver-private.pem  driver.pem  generate.sh  jvm-server.options  keystore-driver.jks  keystore-driver.p12  node-keystore.jks  node-truststore.jks  rootca.conf  rootca.crt  rootca.key  rootca.srl  signing_request.crt_signed  signing_request.csr
integration/migrations/: 01_schema.cql  02_data.cql
integration/tests/: basic_query.lua  basic_query_spec.lua  batch_query_spec.lua  collections_spec.lua  compatibility_spec.lua  connect_spec.lua  helper.lua  logging_spec.lua  test_helper.lua
rockspec/: lucas-scm-1.rockspec
scripts/: build-deps-18.sh  build-deps-20.sh  build-deps-22.sh  build-deps-alpine-317.sh  build-w-cmake.sh  cass_migrations_entrypoint.sh  install-cqlsh.sh
src/: auth.c  batch.c  compat.c  compatibility.c  compatible.c  connect.c  errors.c  library.c  logging.c  logs.c  lucas.c  metrics.c  query.c  querying.c  state.c  types.c
tests/: lucas_test.cpp
